--- a/.env.example
+++ b/.env.example
@@ -6,15 +6,15 @@ API_URL="https://api.uptimerobot.com/v2/"
 # UptimeRobot Api Keys - required
 ## This project only requires Read-only API key
 ## https://dashboard.uptimerobot.com/integrations
-API_KEY=""
+API_KEY="ur2893589-c810cb813d49d0a0a15cc6ba"
 
 # Deployment platform - required
 ## cloudflare ( default ) | auto
 ## If you use a platform other than cloudflare, please change to auto
-DEPLOYMENT_PLATFORM="cloudflare"
+DEPLOYMENT_PLATFORM="auto"
 
 # Site Title
-SITE_TITLE="IMSYY 站点监测"
+SITE_TITLE="网站服务监测"
 
 # Site Description 
 SITE_DESCRIPTION="一个简约的站点监测 | a simple site-status pages, power by uptimerobot"
